[package]
name = "rusty-kernel-tools"
version = "0.1.0"
authors = ["Timo Betcke <timo.betcke@gmail.com>"]
edition = "2018"
license = "BSD-3-Clause"
description = "Basic data structures for the rusty-fast-solvers set of packages."
homepage = "https://github.com/rusty-fast-solvers/rusty-kernel-tools"
repository = "https://github.com/rusty-fast-solvers/rusty-kernel-tools"
readme = "README"

[lib]
name = "rusty_kernel_tools"

[dependencies]
num = "0.4"
ndarray = "0.15"
